cmake_minimum_required(VERSION 3.8)
project(kmeans)
find_package( OpenCV REQUIRED)
find_package(PCL REQUIRED)
include_directories(${PCL})
include_directories(${OpenCV})
set(CMAKE_CXX_STANDARD 14)
link_directories(${OpenCV_LIBRARY_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_executable(kmeans main.cpp compare.cpp pipei.cpp compare.h pipei.h)
target_link_libraries(kmeans ${OpenCV_LIBRARIES} ${PCL_LIBRARIES})